--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,3 +34,11 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          
+  deployment:
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - name: Run a one line script
+        run: echo Deploying to Production
+    
